@startuml er-staff
' Propósito: modelo relacional del módulo staff (Doctor 1:1 con User, M:N con Branch y Vertical, disponibilidad como bloques concretos por fecha)
' Última actualización: 2026-05-29 (ADR-007: bloques concretos, reemplaza pattern+override)
' Código de referencia: backend/app/modules/staff/models/

!theme plain
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80
skinparam defaultFontSize 13
hide circle
hide empty members

title ER — Backend · Staff module

legend top right
  | <#FFFFE0> Marker | Significado |
  | * | NOT NULL |
  | <<PK>> | Primary Key |
  | <<FK>> | Foreign Key |
  | <<unique>> | UNIQUE constraint |
  | <<nullable>> | NULL permitido |
  | <<join>> | Tabla de asociación M:N |
endlegend

' ─────────────────────────────────────────────────────────────
' Entidades principales del módulo
' ─────────────────────────────────────────────────────────────

entity "doctor" as t_doc {
  * id : varchar(36) <<PK>>
  --
  * user_id : varchar(36) <<unique, FK→user>>
  cmp_code : varchar(40) <<nullable, indexed>>
  bio : text <<nullable>>
  photo_url : varchar(500) <<nullable>>
  signature_url : varchar(500) <<nullable>>
  * slot_duration_min : int = 30
  --
  * active : boolean
  deleted_at : timestamptz <<nullable>>
  * created_on : timestamptz
  * created_by : varchar(36)
  * updated_on : timestamptz
  * updated_by : varchar(36)
}

entity "doctor_availability" as t_av {
  * id : varchar(36) <<PK>>
  --
  * doctor_id : varchar(36) <<FK→doctor, indexed>>
  * branch_id : varchar(36) <<FK→branch>>
  * office_id : varchar(36) <<FK→office>>
  * date : date
  * opens_at : time
  * closes_at : time
  --
  ' Bloque CONCRETO por fecha (ADR-007) — NO recurrente, sin day_of_week, sin is_available.
  ' La hora local se interpreta en branch.timezone (igual que clinic.OfficeOperatingHours).
  ' CHECK (closes_at > opens_at)  → ck_doctor_availability_closes_after_opens
  ' Invariantes validados en service (no constraint):
  '   1) office_id pertenece a branch_id                 (OFFICE_NOT_IN_BRANCH)
  '   2) doctor está asignado a branch (doctor_branch)    (DOCTOR_NOT_IN_BRANCH)
  '   3) sin solapamiento del mismo doctor en la misma date (AVAILABILITY_OVERLAP)
  ' Semántica: "no disponible" = sin bloque · "extra" = agregar bloque · "vacaciones" = sin bloques.
  ' Cierre del consultorio NO vive aquí (clinic.OfficeClosure); scheduling lo resta.
  * active : boolean
  deleted_at : timestamptz <<nullable>>
  * created_on : timestamptz
  * created_by : varchar(36)
  * updated_on : timestamptz
  * updated_by : varchar(36)
}

' ─────────────────────────────────────────────────────────────
' Tablas de asociación M:N
' ─────────────────────────────────────────────────────────────

entity "doctor_branch" as t_db <<join>> {
  * doctor_id : varchar(36) <<PK, FK→doctor>>
  * branch_id : varchar(36) <<PK, FK→branch>>
  --
  ON DELETE CASCADE (doctor_id) · RESTRICT (branch_id)
}

entity "doctor_vertical" as t_dv <<join>> {
  * doctor_id : varchar(36) <<PK, FK→doctor>>
  * vertical_id : varchar(36) <<PK, FK→vertical>>
  --
  ON DELETE CASCADE (doctor_id) · RESTRICT (vertical_id)
}

' ─────────────────────────────────────────────────────────────
' Entidades externas (sólo referencia)
' ─────────────────────────────────────────────────────────────

entity "user" as t_user <<external>> #lightgrey {
  ' Módulo: admin
  * id : varchar(36) <<PK>>
  * email : varchar(255) <<unique>>
  ...
}

entity "branch" as t_br <<external>> #lightgrey {
  ' Módulo: clinic
  * id : varchar(36) <<PK>>
  * timezone : varchar(60)
  ...
}

entity "office" as t_off <<external>> #lightgrey {
  ' Módulo: clinic
  * id : varchar(36) <<PK>>
  * branch_id : varchar(36) <<FK>>
  ...
}

entity "vertical" as t_vert <<external>> #lightgrey {
  ' Módulo: catalog
  * id : varchar(36) <<PK>>
  ...
}

entity "appointment" as t_appt <<external>> #lightgrey {
  ' Módulo: scheduling
  * id : varchar(36) <<PK>>
  * doctor_id : varchar(36) <<FK→doctor>>
  ...
}

' ─────────────────────────────────────────────────────────────
' Relaciones (crow's foot)
' ─────────────────────────────────────────────────────────────

' Doctor ↔ User (1:1)
t_user ||--|| t_doc : "user_id\n(UNIQUE)"

' Disponibilidad (1:N desde Doctor)
t_doc ||--o{ t_av : "bloques\nconcretos"

' Availability → Branch/Office (1:N, ambos NOT NULL)
t_br  ||--o{ t_av
t_off ||--o{ t_av

' M:N Doctor ↔ Branch
t_doc ||--o{ t_db
t_db  }o--|| t_br

' M:N Doctor ↔ Vertical
t_doc ||--o{ t_dv
t_dv  }o--|| t_vert

' Referencias informativas
t_doc ||--o{ t_appt : "atiende citas (scheduling)"

' ─────────────────────────────────────────────────────────────
' Notas
' ─────────────────────────────────────────────────────────────

note right of t_doc
  **1:1 con User** (ADR-002).
  Creación NESTED: el service crea
  User (role DOCTOR) + Doctor en
  una transacción.
  Asesor/Admin son User+Role
  sin tabla propia.

  ""slot_duration_min"" define el
  grano del calendario: scheduling
  reserva 1+ slots contiguos según
  ""product.duration_min"".
end note

note right of t_av
  **Disponibilidad = bloques
  concretos por fecha** (ADR-007).
  Reemplaza el patrón semanal
  recurrente + overrides.
  El doctor (re)define su calendario
  por periodo; la UI es una grilla
  semanal (ver staff/ui.md).
  Edición: CRUD por bloque + alta
  masiva (varios días a la vez).
end note

note bottom of t_db
  **Sedes donde atiende**
  El doctor solo puede crear bloques
  de disponibilidad en sedes donde
  está asignado (invariante #2).
end note

note bottom of t_dv
  **Verticales que cubre**
  Cruza con office_vertical (clinic)
  al agendar: el office del bloque
  debe ser apto para la vertical
  del producto.
end note

@enduml
